# service-playground

./: docker-compose.yml
alaya-clients-service/: alembic.ini  pyproject.toml  session.py
alaya-clients-service/migrations/: env.py
alaya-clients-service/migrations/versions/: e5afdddca964_recreate_all.py
alaya-clients-service/src/alaya/clients/models/: __init__.py  eav.py
alaya-clients-service/tests/: test_alaya_clients_service.py
